[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
axum = "0.8.4"
hyper-custom-cert = { path = "../hyper-custom-cert", features = ["rustls", "insecure-dangerous"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

